# archmind

./: BlenderTools.md  CMakeLists.txt  ConstrainedParameterizationSoftware.md  DesignPhilosophy.md  Doxyfile  INSTALL  InstallationGuide.md  LICENSE  ProjectHome.md  README  SConstruct  SphereMappingSoftware.md
blender_scripts/: archmind_split.py  archmind_utils.py
examples/blender_scripts/: archmind_check.py  archmind_decimate.py  archmind_fill.py  archmind_improve.py  archmind_split.py  archmind_subsurf.py  archmind_utils.py
examples/blender_scripts25/: archmind_check.py  archmind_decimate.py  archmind_fill.py  archmind_improve.py  archmind_split.py  archmind_subsurf.py  archmind_utils.py
examples/constrained_mapping/: CMakeLists.txt  license.txt
examples/constrained_mapping/src/: CommandLine.h  GeometryTraits.h  Main.cpp  NonLinearSolvers.h  OpenCLBlas.cpp  OpenCLBlas.h  OpenCLSolver.cpp  OpenCLSolver.h  UtilsCL.cpp  UtilsCL.h  config.h  constrained_solver.cl  laplace.cl
examples/cpp/: CMakeLists.txt  smooth.cpp  stl_export.cpp  tetra.cpp
examples/scripts/: geo_clean.py  smooth.py
examples/sphere_mapping/: CMakeLists.txt  license.txt
examples/sphere_mapping/CL/: nl_laplacesolver.cl  solver.cl
examples/sphere_mapping/src/: CommandLine.h  Main.cpp  OpenCL.cpp  OpenCL.h  OpenCLSolver.cpp  OpenCLSolver.h  SolverCL.h  SphereGeometry.h  Utils.cpp  Utils.h  solver.cl
msvc/: archmind.sln  archmind.vcproj
msvc/examples/smooth/: smooth.vcproj
msvc/examples/sphere_map/: SphereMapping.vcproj
msvc/examples/stl_export/: stl_export.vcproj
msvc/examples/tetra/: tetra.vcproj
scons/: SConstruct
scons/examples/smooth/: SConscript
scons/examples/sphere_mapping/: SConscript
scons/examples/stl_export/: SConscript
scons/examples/tetra/: SConscript
src/App/: Main.cpp  SConscript
src/Geometry/: Algorithms.h  Geometry.h  Geometry.inl  Iterators.h  Mesh.inl  Traits.h
src/Io/: Base.h  Base.inl  Io.h  Loader.h  Loader.inl  OFF.h  OFF.inl  SConscript  WaveFront.h  WaveFront.inl
src/Loaders/: Loader.h  Loader.inl  WaveFront.h  WaveFront.inl
src/Math/: MathTraits.h  Vector.h  Vector.inl
src/Python/: CMakeLists.txt  PyGeometry.cpp  PyGeometry.h  PyInterface.cpp  PyInterface.h  PyLoader.cpp  PyLoader.h  PyTypes.cpp  PyTypes.h  SConscript
